Changes include first working version of webserver Signed-off-by: "babugeet <abhinandhbg@gmail.com>"

--- a/TODO
+++ b/TODO
@@ -47,3 +47,6 @@ Project three: Canary operator
 will copy the deployment and will change the image and all.. rest , TBD
 
 Project four: keycloak operator, all the usecases as one crd
+
+
+simple db operation
